<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Server Host -->
        <TextView
            android:text="@string/server_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="0"/>
        <EditText
            android:id="@+id/server_host"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="match_parent"/>

        <!-- Server Port -->
        <TextView
            android:text="@string/server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="1"/>
        <EditText
            android:id="@+id/server_port"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_width="match_parent"/>

        <!-- Username -->
        <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="2" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_row="2"
            android:layout_column="1"/>

        <!-- Password -->
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="3" />
        <EditText
            android:id="@+id/password"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_width="match_parent"/>

        <!-- First Name -->
        <TextView
            android:text="@string/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="4"/>
        <EditText
            android:id="@+id/first_name"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_width="match_parent"/>

        <!-- Last Name -->
        <TextView
            android:text="@string/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="5"/>
        <EditText
            android:id="@+id/last_name"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_width="match_parent"/>

        <!-- Email -->
        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="6"/>
        <EditText
            android:id="@+id/email"
            android:layout_column="1"
            android:layout_row="6"
            android:layout_width="match_parent"/>

        <!-- Gender -->
        <TextView
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_column="0"
            android:layout_row="7"/>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="7"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

            </RadioGroup>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>