<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/person_item">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/icon"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:id="@+id/item_image"
        android:src="@drawable/ic_baseline_location_on_24"/>

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/item_name"/>

        <TextView
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/item_details"/>
    </LinearLayout>
</LinearLayout>
