<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.PersonActivity">

    <!-- First -->
    <TextView
        android:id="@+id/person_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="18sp"/>
    <TextView
        android:text="@string/person_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/purple_500"/>

    <!-- Last -->
    <TextView
        android:id="@+id/person_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="18sp"/>
    <TextView
        android:text="@string/person_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/purple_500"/>

    <!-- Gender -->
    <TextView
        android:id="@+id/person_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_500"
        android:textSize="18sp"/>
    <TextView
        android:text="@string/person_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/purple_500"/>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</LinearLayout>